# ros2_ufc

./: README.md
Aula1/ex1_talker/: CMakeLists.txt  about_pkg.txt
Aula1/ex1_talker/src/: listener.cpp  talker.cpp
Aula3/ex1_talker/: about_pkg.txt  package.xml
Aula3/ex1_talker/src/: listener.cpp  talker.cpp
Aula3/turtle_triangle/: CMakeLists.txt  package.xml
Aula3/turtle_triangle/config/: draw_params.yaml
Aula3/turtle_triangle/include/turtle_triangle/: turtle_triangle.hpp
Aula3/turtle_triangle/launch/: draw_triangle.launch.xml  triangle_bringup.xml
Aula3/turtle_triangle/src/: turtle_triangle.cpp
Aula3/uma_interface/: CMakeLists.txt  package.xml
Aula3/uma_interface/msg/: MinhaMsg.msg
Aula4/tf2_demo/: CMakeLists.txt  package.xml
Aula4/tf2_demo/include/tf2_demo/: cargo_pubsub.hpp  drone_tf_pub.hpp
Aula4/tf2_demo/launch/: demo_bringup.launch.xml  static_frames.launch.xml
Aula4/tf2_demo/rviz/: frame_demo.rviz
Aula4/tf2_demo/src/: cargo_pubsub.cpp  drone_tf_pub.cpp  static_drone_pub.cpp
